--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                 <h1<h2<h3<h4<h5 onclick="showMessage()" class="avatar__title"><h1>Một đời người- Một dòng sông..<h2>Mấy ai làm kẻ đứng trông bến bờ<h3>Muốn qua sông phải lụy đò<h4>Đường đời tri thức cậy nhờ người đưa..<h5>Tháng năm dâu dãi nắng mưa<h6>Con đò tri thức thầy đưa bao người </h1></h2></h3></h4></h5></h6>  
             </div>
 
-            <audio autoplay loop>
-                <source src="Người thầy.mp3" type="audio/mpeg">
-                <source src="Người thầy.mp3" type="audio/ogg">
+            <audio autoplay loop controls>
+                <source src="Người thầy.mp3"type="audio/mpeg">
+                <source src="Người thầy.ogg"type="audio/ogg">
+                <source src="Người thầy.wav"type="audio/wav">
                 Your browser does not support HTML5 video.
             </audio>
 
